--- a/index.html
+++ b/index.html
@@ -193,12 +193,11 @@
     </section>
 
     <section class="section section-prices" id="prices">
-      <p class="prices-larger">A website usually costs around £500.</p>
+      <p class="prices-larger">A website usually costs roughly £500.</p>
       <p>Prices will vary based on the specifics of what you want, so I encourage you to get in contact with me if you'd like to work with me.</p>
       <p>This will involve a 30&ndash;40 minute chat on the phone as we discuss your requirements and I figure out a custom solution for your specific needs. I do not offer pre-made package pricing as I find every job is different.</p>
       <p>I won't charge a daily nor hourly rate if I can avoid it, as instead I prefer to quote an exact figure. You approve that before work begins, so you know exactly how much everything costs.</p>
-      <p>You don't have to pay anything until the work is completed. I will absorb any extras costs (purchasing of your domain name, hosting, email accounts, and so on) and pass that on to you later. I do this as a courtesy so your website operates smoothly without you needing to worry about the impending bills.</p>
-      <p>I'm excited to work with you next!</p>
+      <p>You pay nothing until work is completed and you're happy. I will absorb any extras costs (purchasing of your domain name, hosting, email accounts, and so on) and pass that on to you later. I do this as a courtesy so your website operates smoothly without you needing to worry about the impending bills.</p>
     </section>
 
     <section class="section section-about" id="about">
