--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
               <img class="work-screenshot-img" src="img/dorightjapan_1x.png" alt="Do Right Music blog home page" />
             </div>
             <div class="work-information">
-              <h3 class="work-project-title">Do Right Music <a class="work-view-btn" href="http://dorightmusic.jp" target="_blank">Japan site</a> <a class="work-view-btn" href="http://dorightmusic.com" target="_blank">Canada site</a></h3>
-              <p class="work-role">Responsive design &amp; development for two sites, localisation (for Japan site), tour dates calendar (for Canada site), social media integration</p>
+              <h3 class="work-project-title">Do Right Music <a class="work-view-btn" href="http://dorightmusic.com" target="_blank">Canada</a> <a class="work-view-btn" href="http://dorightmusic.jp" target="_blank">Japan</a></h3>
+              <p class="work-role">Responsive design &amp; development for two sites, WordPress overhaul (for Canada site), localisation work (Japan), various social media integrations</p>
               <p class="work-desc">I worked with Do Right Music to design and launch <a href="http://dorightmusic.jp" target="_blank">Do Right Japan</a>, which is a sister site to <a href="http://dorightmusic.com" target="_blank">Do Right Canada</a>, which I've also worked on extensively. Having both on Tumblr allows fans to easily share content so musicians enjoy more exposure and it's simple for the company's staff to update.</p>
             </div>
           </div>
