--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Ed Adams: Website design and development</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Leamington Spa, Warwickshire website designer and developer with over six years experience in all things website related." />
+    <meta name="description" content="Ed is a Leamington Spa-based website designer & developer with many years of experience in all things website-related." />
     <link rel="stylesheet" href="css/application.css" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans:700" rel="stylesheet">
   </head>
