--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
     <footer class="footer-new">
       <div class="section">
         <div class="footer-credit-new">
-          <p>By Ed Adams</p>
-          <p>Since 2010 and until forever!</p>
-          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy Policy</a></p>
+          <p>Handmade with love.</p>
+          <p>&copy; 2011&ndash;2019</p>
+          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy policy</a></p>
         </div>
         <ul class="footer-social-new">
           <li>
-            <a href="mailto:edadams101@gmail.com" target="_new">
+            <a href="/contact">
               <svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="social-icon social-icon-github">
                 <title>Email</title>
                 <path class="email-path1" d="M512 0c-282.77 0-512 229.23-512 512s229.23 512 512 512 512-229.23 512-512-229.23-512-512-512zM256 256h512c9.138 0 18.004 1.962 26.144 5.662l-282.144 329.168-282.144-329.17c8.14-3.696 17.006-5.66 26.144-5.66zM192 704v-384c0-1.34 0.056-2.672 0.14-4l187.664 218.942-185.598 185.598c-1.444-5.336-2.206-10.886-2.206-16.54zM768 768h-512c-5.654 0-11.202-0.762-16.54-2.208l182.118-182.118 90.422 105.498 90.424-105.494 182.116 182.12c-5.34 1.44-10.886 2.202-16.54 2.202zM832 704c0 5.654-0.762 11.2-2.206 16.54l-185.6-185.598 187.666-218.942c0.084 1.328 0.14 2.66 0.14 4v384z"></path>
