--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -105,11 +105,11 @@
         <p>I may need to update my Privacy Policy from time to time. I will notify you of any
         changes by posting the new Privacy Policy on this page. I will also let you know by way of a prominent notice on the top of this page when an update has been made.</p>
 
-        <hr />
+        <hr class="hr">
 
         <h4 id="contact">One Last Thing...</h4>
 
-        <p>I have made efforts to ensure the accuracy of this Privacy Policy and make sure it's as comprehensive as possible. If something is wrong with this Privacy Policy in any way, or if you have any questions about it, please know that you are welcome to <a href="mailto:edadams101+privacypolicy@gmail.com">send me an email</a>.</p>
+        <p>I have made efforts to ensure the accuracy of this Privacy Policy and make sure it's as comprehensive as possible. If something is wrong with this Privacy Policy in any way, <a href="/contact">send me an email</a>.</p>
       </div>
     </section>
  <footer class="footer-new">
