i got new clients

--- a/index.html
+++ b/index.html
@@ -119,14 +119,32 @@
       <div class="history">
         <div class="history-item">
           <div class="history-inner">
+            <a class="history-item-title" href="https://sharonhansford.co.uk">Sharon Hansford</a>
+            <p class="history-item-description">Current, WordPress, 2020</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://foggingnow.com">Fogging Now</a>
+            <p class="history-item-description">Current, bespoke content system, 2020</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://wightwavesholidays.co.uk">Wight Waves</a>
+            <p class="history-item-description">Current, WordPress & online booking system, 2019</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
             <a class="history-item-title" href="https://walkerbayshop.uk">Walker Bay Shop UK</a>
-            <p class="history-item-description">Current, WordPress & online store, 2018</p>
+            <p class="history-item-description">Current, WordPress & online store, 2019</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://warwickboats.co.uk">Warwick Boats</a>
-            <p class="history-item-description">Current, WordPress, 2018</p>
+            <p class="history-item-description">Current, WordPress & online booking system, 2018</p>
           </div>
         </div>
         <div class="history-item">
