--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ed Adams: Website design and development</title>
+    <title>Ed Adams: Website development and design</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Ed is a Leamington Spa-based website designer & developer with many years of experience in all things website-related." />
+    <meta name="description" content="Leamington Spa, Warwickshire website developer. Many years experience in all things website-y" />
     <link rel="stylesheet" href="css/application.css" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans:700" rel="stylesheet">
   </head>
@@ -15,7 +15,7 @@
         <h1 class="title">
           <a href="/">Ed Adams</a>
         </h1>
-        <h2 class="subtitle">Website design &amp; development</h2>
+        <h2 class="subtitle">Website development &amp; design</h2>
       </div>
     </header>
     <section class="section section-intro" id="intro">
@@ -120,79 +120,79 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://sharonhansford.co.uk">Sharon Hansford</a>
-            <p class="history-item-description">Current, WordPress, 2020</p>
+            <p class="history-item-description">WordPress, 2020</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://foggingnow.com">Fogging Now</a>
-            <p class="history-item-description">Current, bespoke content system, 2020</p>
+            <p class="history-item-description">Bespoke systems, 2020</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://wightwavesholidays.co.uk">Wight Waves</a>
-            <p class="history-item-description">Current, WordPress & online booking system, 2019</p>
+            <p class="history-item-description">WordPress &amp; online bookings (on-site), 2019</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://walkerbayshop.uk">Walker Bay Shop UK</a>
-            <p class="history-item-description">Current, WordPress & online store, 2019</p>
+            <p class="history-item-description">WordPress &amp; e-commerce, 2019</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://warwickboats.co.uk">Warwick Boats</a>
-            <p class="history-item-description">Current, WordPress & online booking system, 2018</p>
+            <p class="history-item-description">WordPress &amp; online bookings (third party), 2018</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://e2s.com">E2S</a>
-            <p class="history-item-description">Agency: DSC. Ongoing, custom</p>
+            <p class="history-item-description">Ongoing, custom, 2017<br>Agency: DSC</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://starbuckdriving.co.uk">Starbuck Driving</a>
-            <p class="history-item-description">Current, WordPress, 2017</p>
+            <p class="history-item-description">WordPress, 2017</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://chimeadvisors.com">Chime Advisors</a>
-            <p class="history-item-description">Agency: DSC. Current, custom, 2016</p>
+            <p class="history-item-description">Custom, 2016<br>Agency: DSC</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://dorightmusic.com">Do Right Music</a>
-            <p class="history-item-description">Current, Tumblr platform, 2015</p>
+            <p class="history-item-description">Tumblr platform, 2015</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="http://riseandshine.uk.net">Rise & Shine</a>
-            <p class="history-item-description">Current, custom sofware, 2015</p>
+            <p class="history-item-description">Bespoke systems, 2015</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="http://plakiaspanorama.com">Plakias Panorama</a>
-            <p class="history-item-description">Current, WordPress, 2015</p>
+            <p class="history-item-description">WordPress, 2015</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="http://rotaryclubofbroadlands.org.uk">Broadlands Rotary</a>
-            <p class="history-item-description">Current, static content, 2014</p>
+            <p class="history-item-description">Static content, 2014</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://heatheradams.co.uk">Heather Adams</a>
-            <p class="history-item-description">Current, Jekyll SSG, 2014</p>
+            <p class="history-item-description">WordPress, 2014</p>
           </div>
         </div>
         <div class="history-item">
@@ -204,16 +204,16 @@
         <div class="history-item">
           <div class="history-inner">
             <span class="history-item-title">And more!</span>
-            <p class="history-item-description">Some work isn't listed, like projects in the midst of development. Check back soon!</p>
+            <p class="history-item-description">Some work isn't listed, such as projects that are in development. Check back soon!</p>
           </div>
         </div>
       </div>
     </section>
 
     <section class="section section-prices" id="prices">
-      <p class="prices-larger">A website usually costs roughly £500.</p>
-      <p>Prices will vary based on the specifics of what you want, so I encourage you to get in contact with me if you'd like to work with me.</p>
-      <p>This will involve a 30&ndash;40 minute chat on the phone as we discuss your requirements and I figure out a custom solution for your specific needs. I do not offer pre-made package pricing as I find every job is different.</p>
+      <p class="prices-larger">A website usually costs around £500.</p>
+      <p>Around being the operative word. Prices vary based on the specifics of what needs to be done - but I will do it! I encourage you to get in contact with me if you'd like to work with me.</p>
+      <p>This will involve a short chat on the phone as we discuss your requirements and I figure out a custom solution for your specific needs. I do not offer pre-made package pricing as I find every job is different.</p>
       <p>I won't charge a daily nor hourly rate if I can avoid it, as instead I prefer to quote an exact figure. You approve that before work begins, so you know exactly how much everything costs.</p>
       <p>You pay nothing until work is completed and you're happy. I will absorb any extras costs (purchasing of your domain name, hosting, email accounts, and so on) and pass that on to you later. I do this as a courtesy so your website operates smoothly without you needing to worry about the impending bills.</p>
     </section>
@@ -226,16 +226,16 @@
 
     <section class="section section-contact" id="contact">
       <div class="contact-button-wrapper">
-        <a class="contact-button-start" href="/contact">Get in contact with me</a>
+        <a class="contact-button-start" href="/contact">Contact me now</a>
       </div>
     </section>
 
     <footer class="footer-new">
       <div class="section">
         <div class="footer-credit-new">
-          <p>Handmade with love.</p>
-          <p>&copy; 2011&ndash;2020</p>
-          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy policy</a></p>
+          <p>Hand made, with love and care</p>
+          <p>&copy; Since 2011, until forever</p>
+          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy</a></p>
         </div>
         <ul class="footer-social-new">
           <li>
