--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <div class="form-section form-section-disclaimer">
           <div class="form-disclaimer">
             <p class="big">Just to let you know&hellip;</p>
-            <p>When you provide your information, it is emailed to me and stored so I can respond to your enquiry. All information is visible only to me. (Under GDPR, I’m required to tell you this.)</p>
+            <p>When you provide your information, it is emailed to me and stored on my email account so I can reply to you. All information is visible only to me. (Under GDPR, I’m required to tell you this.)</p>
           </div>
         </div>
       </form>
@@ -51,9 +51,9 @@
     <footer class="footer-new">
       <div class="section">
         <div class="footer-credit-new">
-          <p>Handmade with love.</p>
-          <p>&copy; 2011&ndash;2020</p>
-          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy policy</a></p>
+          <p>Hand made, with love and care</p>
+          <p>&copy; Since 2011, until forever</p>
+          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy</a></p>
         </div>
         <ul class="footer-social-new">
           <li>
