--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -115,9 +115,9 @@
  <footer class="footer-new">
       <div class="section">
         <div class="footer-credit-new">
-          <p>Handmade with love.</p>
-          <p>&copy; 2011&ndash;2020</p>
-          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy policy</a></p>
+          <p>Hand made, with love and care</p>
+          <p>&copy; Since 2011, until forever</p>
+          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy</a></p>
         </div>
         <ul class="footer-social-new">
           <li>
