--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Leamington Spa, Warwickshire website designer and developer with over six years experience in all things website related." />
     <link rel="stylesheet" href="css/application.css" />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans:700" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body class="home">
     <header class="header">
