--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ed Adams: Website development and design</title>
+    <title>Ed Adams: Website design and development</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Leamington Spa, Warwickshire website developer. Many years experience in all things website-y" />
