--- a/index.html
+++ b/index.html
@@ -120,32 +120,44 @@
       <div class="history">
         <div class="history-item">
           <div class="history-inner">
+            <a class="history-item-title" href="https://silvermarketingassociation.org">Silver Marketing</a>
+            <p class="history-item-description">WordPress &amp; e-commerce (WooCommerce), 2022</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://leamboatcentre.com">Leam Boat Centre</a>
+            <p class="history-item-description">E-commerce (WooCommerce) &amp; API integrations, 2021</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://platformodcoaching.com">Platform OD &amp; Coaching</a>
+            <p class="history-item-description">WordPress, 2021</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
             <a class="history-item-title" href="https://sharonhansford.co.uk">Sharon Hansford</a>
             <p class="history-item-description">WordPress, 2020</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <a class="history-item-title" href="https://foggingnow.com">Fogging Now</a>
-            <p class="history-item-description">Bespoke systems, 2020</p>
+            <a class="history-item-title" href="https://warwickboats.co.uk">Warwick Boats</a>
+            <p class="history-item-description">E-commerce (WooCommerce), 2020</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <a class="history-item-title" href="https://wightwavesholidays.co.uk">Wight Waves</a>
+            <a class="history-item-title" href="https://wightwavesholidays.co.uk">Wight Waves Holidays</a>
             <p class="history-item-description">WordPress &amp; online bookings (on-site), 2019</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <a class="history-item-title" href="https://walkerbayshop.uk">Walker Bay Shop UK</a>
-            <p class="history-item-description">WordPress &amp; e-commerce, 2019</p>
-          </div>
-        </div>
-        <div class="history-item">
-          <div class="history-inner">
-            <a class="history-item-title" href="https://warwickboats.co.uk">Warwick Boats</a>
-            <p class="history-item-description">WordPress &amp; online bookings (third party), 2018</p>
+            <a class="history-item-title" href="https://walkerbayshop.uk">Walker Bay Shop</a>
+            <p class="history-item-description">E-commerce (WooCommerce), 2019</p>
           </div>
         </div>
         <div class="history-item">
