--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://silvermarketingassociation.org">Silver Marketing</a>
-            <p class="history-item-description">WordPress &amp; e-commerce (WooCommerce), 2022</p>
+            <p class="history-item-description">WordPress &amp; e-commerce (WooCommerce), 2021</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://leamboatcentre.com">Leam Boat Centre</a>
-            <p class="history-item-description">E-commerce (WooCommerce) &amp; API integrations, 2021</p>
+            <p class="history-item-description">WooCommerce (online store) &amp; API integrations, 2021</p>
           </div>
         </div>
         <div class="history-item">
@@ -145,25 +145,25 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://warwickboats.co.uk">Warwick Boats</a>
-            <p class="history-item-description">E-commerce (WooCommerce), 2020</p>
+            <p class="history-item-description">WooCommerce, 2020</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://wightwavesholidays.co.uk">Wight Waves Holidays</a>
-            <p class="history-item-description">WordPress &amp; online bookings (on-site), 2019</p>
+            <p class="history-item-description">WordPress &amp; bookings (online), 2019</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://walkerbayshop.uk">Walker Bay Shop</a>
-            <p class="history-item-description">E-commerce (WooCommerce), 2019</p>
+            <p class="history-item-description">(WooCommerce, 2019</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://e2s.com">E2S</a>
-            <p class="history-item-description">Ongoing, custom, 2017<br>Agency: DSC</p>
+            <p class="history-item-description">Custom, 2017 ongoing<br>Agency: DSC</p>
           </div>
         </div>
         <div class="history-item">
@@ -199,13 +199,13 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="http://rotaryclubofbroadlands.org.uk">Broadlands Rotary</a>
-            <p class="history-item-description">Static content, 2014</p>
+            <p class="history-item-description">Bespoke systems, 2014</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://heatheradams.co.uk">Heather Adams</a>
-            <p class="history-item-description">WordPress, 2014</p>
+            <p class="history-item-description">WordPress, 2014 ongoing (this is my mum)</p>
           </div>
         </div>
         <div class="history-item">
