--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
         </div>
         <div class="history-item">
           <div class="history-inner">
+            <a class="history-item-title" href="https://michellelotherington.com">Michelle Lotherington</a>
+            <p class="history-item-description">WordPress, 2020</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
             <a class="history-item-title" href="https://sharonhansford.co.uk">Sharon Hansford</a>
             <p class="history-item-description">WordPress, 2020</p>
           </div>
