--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="testimonials">
         <div class="testimonial">
           <q>We're always impressed by how quick Ed is to get things done. I can honestly say Ed offers the best website services we've ever used - and we've used a few!</q>
-          <div class="from">Matt, Warwick Boats</div>
+          <div class="from">Matt, Leisure Boats UK</div>
         </div>
         <div class="testimonial">
           <q>I'm very satisfied with the work Ed's done for me. I trust him to know what's best for our site. His ongoing tech support (4 years and counting) has been fantastic.</q>
@@ -120,8 +120,14 @@
       <div class="history">
         <div class="history-item">
           <div class="history-inner">
+            <a class="history-item-title" href="https://leisureboats.uk">Leisure Boats UK</a>
+            <p class="history-item-description">WordPress &amp; e-commerce (WooCommerce), 2022</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
             <a class="history-item-title" href="https://silvermarketingassociation.org">Silver Marketing</a>
-            <p class="history-item-description">WordPress &amp; e-commerce (WooCommerce), 2021</p>
+            <p class="history-item-description">E-commerce (WooCommerce) & event tickets, 2021</p>
           </div>
         </div>
         <div class="history-item">
