--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="from">Rowena, Plakias Panorama</div>
         </div>
         <div class="testimonial">
-          <q>A hardworking developer with the energy and drive to get better with everything he does. I'm very satisfied with the work he's done with us coding designs into HTML.</q>
+          <q>A hardworking developer with the energy and drive to get better with everything he does. I'm very satisfied with the work he's done with us on design and code.</q>
           <div class="from">Jess, DSC</div>
         </div>
       </div>
