--- a/index.html
+++ b/index.html
@@ -120,6 +120,18 @@
       <div class="history">
         <div class="history-item">
           <div class="history-inner">
+            <a class="history-item-title" href="https://wightdiamondholidays.co.uk">Wight Diamond Holidays</a>
+            <p class="history-item-description">WordPress &amp; accommodation booking (HBook), 2022</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://leamingtonacupuncture.co.uk">Leamington Acupuncture</a>
+            <p class="history-item-description">WordPress, strong SEO emphasis, 2022</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
             <a class="history-item-title" href="https://leisureboats.uk">Leisure Boats UK</a>
             <p class="history-item-description">WordPress &amp; e-commerce (WooCommerce), 2022</p>
           </div>
