--- a/index.html
+++ b/index.html
@@ -40,20 +40,7 @@
             <div class="work-information">
               <h3 class="work-project-title">Walker Bay Shop UK <a class="work-view-btn" href="https://walkerbayshop.uk" target="_blank">Visit</a></h3>
               <p class="work-role">WooCommerce and WordPress development, various design tasks, credit/debit card payment support</p>
-              <p class="work-desc">I worked with the Warwick Boats team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the shop's support for paying with credit/debit cards via Stripe integration.</p>
-            </div>
-          </div>
-        </div>
-        <div class="work-item">
-          <div class="work-inner">
-            <div class="work-screenshot">
-              <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-              <img class="work-screenshot-img" src="img/warwickboats_1x.png" alt="Warwick Boats home page" />
-            </div>
-            <div class="work-information">
-              <h3 class="work-project-title">Warwick Boat Hire <a class="work-view-btn" href="https://warwickboats.co.uk" target="_blank">Visit</a></h3>
-              <p class="work-role">WordPress development, responsive website design, photo gallery and more</p>
-              <p class="work-desc">Warwick Boat Hire is a boat hire and leisure centre located in St Nicholas Park, Warwick. I've managed their website for several years and have created custom tools, and helped their staff update conten themselves quickly with WordPress.</p>
+              <p class="work-desc">I worked with the team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the shop's support for paying with credit/debit cards via Stripe integration.</p>
             </div>
           </div>
         </div>
@@ -192,12 +179,6 @@
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <a class="history-item-title" href="https://chimeadvisors.com">Chime Advisors</a>
-            <p class="history-item-description">Custom, 2016<br>Agency: DSC</p>
-          </div>
-        </div>
-        <div class="history-item">
-          <div class="history-inner">
             <a class="history-item-title" href="https://dorightmusic.com">Do Right Music</a>
             <p class="history-item-description">Tumblr platform, 2015</p>
           </div>
@@ -216,14 +197,8 @@
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <a class="history-item-title" href="http://rotaryclubofbroadlands.org.uk">Broadlands Rotary</a>
-            <p class="history-item-description">Bespoke systems, 2014</p>
-          </div>
-        </div>
-        <div class="history-item">
-          <div class="history-inner">
             <a class="history-item-title" href="https://heatheradams.co.uk">Heather Adams</a>
-            <p class="history-item-description">WordPress, 2014 ongoing (this is my mum)</p>
+            <p class="history-item-description">WordPress, 2015 ongoing (this is my mum)</p>
           </div>
         </div>
         <div class="history-item">
