--- a/index.html
+++ b/index.html
@@ -48,19 +48,6 @@
           <div class="work-inner">
             <div class="work-screenshot">
               <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-              <img class="work-screenshot-img" src="img/dorightjapan_1x.png" alt="Do Right Music blog home page" />
-            </div>
-            <div class="work-information">
-              <h3 class="work-project-title">Do Right Music <a class="work-view-btn" href="http://dorightmusic.com" target="_blank">Canada</a> <a class="work-view-btn" href="http://dorightmusic.jp" target="_blank">Japan</a></h3>
-              <p class="work-role">Responsive design &amp; development for two sites, WordPress overhaul (for Canada site), localisation work (Japan), various social media integrations</p>
-              <p class="work-desc">I worked with Do Right Music to design and launch <a href="http://dorightmusic.jp" target="_blank">Do Right Japan</a>, which is a sister site to <a href="http://dorightmusic.com" target="_blank">Do Right Canada</a>, which I've also worked on extensively. Having both on Tumblr allows fans to easily share content so musicians enjoy more exposure and it's simple for the company's staff to update.</p>
-            </div>
-          </div>
-        </div>
-        <div class="work-item">
-          <div class="work-inner">
-            <div class="work-screenshot">
-              <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
               <img class="work-screenshot-img" src="img/starbuckdriving_1x.png" alt="Starbuck Driving home page design" />
             </div>
             <div class="work-information">
@@ -107,8 +94,14 @@
       <div class="history">
         <div class="history-item">
           <div class="history-inner">
+            <a class="history-item-title" href="https://jogalovesyoga.com">Joga Loves Yoga</a>
+            <p class="history-item-description">Custom (DecapCMS), 2023</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
             <a class="history-item-title" href="https://wightdiamondholidays.co.uk">Wight Diamond Holidays</a>
-            <p class="history-item-description">WordPress &amp; accommodation booking (HBook), 2022</p>
+            <p class="history-item-description">WordPress &amp; accommodation booking (HBook), 2023</p>
           </div>
         </div>
         <div class="history-item">
@@ -162,7 +155,7 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://walkerbayshop.uk">Walker Bay Shop</a>
-            <p class="history-item-description">(WooCommerce, 2019</p>
+            <p class="history-item-description">WooCommerce, 2019</p>
           </div>
         </div>
         <div class="history-item">
@@ -175,12 +168,6 @@
           <div class="history-inner">
             <a class="history-item-title" href="https://starbuckdriving.co.uk">Starbuck Driving</a>
             <p class="history-item-description">WordPress, 2017</p>
-          </div>
-        </div>
-        <div class="history-item">
-          <div class="history-inner">
-            <a class="history-item-title" href="https://dorightmusic.com">Do Right Music</a>
-            <p class="history-item-description">Tumblr platform, 2015</p>
           </div>
         </div>
         <div class="history-item">
