--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
     </section>
     
     <section class="section section-history" id="history">
+      <div class="history-intro">
+        <p>I'm proud to provide ongoing support to a variety of clients, big and small. I've worked on several more, this shows the projects that I maintain to this day and have since the year shown.</p>
+      </div>
       <div class="history">
         <div class="history-item">
           <div class="history-inner">
