--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
           <div class="work-inner">
             <div class="work-screenshot">
               <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-              <img class="work-screenshot-img" src="img/walkerbayshop_1x.png" alt="Walker Bay Shop online store home page" />
+              <img class="work-screenshot-img" src="img/sma.jpg" alt="Silver Marketing Association home page" />
             </div>
             <div class="work-information">
-              <h3 class="work-project-title">Walker Bay Shop UK <a class="work-view-btn" href="https://walkerbayshop.uk" target="_blank">Visit</a></h3>
-              <p class="work-role">WooCommerce and WordPress development, various design tasks, credit/debit card payment support</p>
-              <p class="work-desc">I worked with the team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the shop's support for paying with credit/debit cards via Stripe integration.</p>
+              <h3 class="work-project-title">Silver Marketing Association <a class="work-view-btn" href="https://silvermarketingassociation.org" target="_blank">Visit</a></h3>
+              <p class="work-role">Subscriptions &amp; membership, event ticketing, WooCommerce e-commerce development</p>
+              <!-- <p class="work-desc">I worked with the team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the shop's support for paying with credit/debit cards via Stripe integration.</p> -->
             </div>
           </div>
         </div>
@@ -51,9 +51,9 @@
               <img class="work-screenshot-img" src="img/starbuckdriving_1x.png" alt="Starbuck Driving home page design" />
             </div>
             <div class="work-information">
-              <h3 class="work-project-title">Starbuck Driving <a class="work-view-btn" href="http://starbuckdriving.co.uk" target="_blank">View</a></h3>
-              <p class="work-role">Responsive site design &amp; development, SEO, copy writing</p>
-              <p class="work-desc">I worked with a local driving instructor on improving his site and creating a bold new design. The rich green colours and clear typography provide visual impact, so the site leaves a lasting impression.</p>
+              <h3 class="work-project-title">Leam Boat Centre <a class="work-view-btn" href="http://leamboatcentre.com" target="_blank">Visit</a></h3>
+              <p class="work-role">WooCommerce (and WordPress) e-commerce development, SEO, copy writing</p>
+              <!-- <p class="work-desc">I worked with a local driving instructor on improving his site and creating a bold new design. The rich green colours and clear typography provide visual impact, so the site leaves a lasting impression.</p> -->
             </div>
           </div>
         </div>
@@ -64,9 +64,9 @@
               <img class="work-screenshot-img" src="img/heatheradams_1x.png" alt="Heather Adams web site design" />
             </div>
             <div class="work-information">
-              <h3 class="work-project-title">Heather Adams <a class="work-view-btn" href="http://heatheradams.co.uk" target="_blank">View</a></h3>
-              <p class="work-role">Responsive site design &amp; development, SEO</p>
-              <p class="work-desc">I produced a clean and clear site to help my mum, a qualified acupuncturist, massage therapist &amp; beauty therapist. The site is aimed at helping people to learn more about her, see what she can do to help them and find out her treatment prices quickly.</p>
+              <h3 class="work-project-title">Wight Waves Holidays <a class="work-view-btn" href="http://wightwavesholidays.co.uk" target="_blank">Visit</a></h3>
+              <p class="work-role">WordPress development, online booking &amp; payments (Airbnb, TripAdvisor)</p>
+              <!-- <p class="work-desc">I produced a clean and clear site to help my mum, a qualified acupuncturist, massage therapist &amp; beauty therapist. The site is aimed at helping people to learn more about her, see what she can do to help them and find out her treatment prices quickly.</p> -->
             </div>
           </div>
         </div>
