Fix broken image URLs

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="work-inner">
             <div class="work-screenshot">
               <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-              <img class="work-screenshot-img" src="img/starbuckdriving_1x.png" alt="Starbuck Driving home page design" />
+              <img class="work-screenshot-img" src="img/lbc.jpg" alt="Leam Boat Centre home page design" />
             </div>
             <div class="work-information">
               <h3 class="work-project-title">Leam Boat Centre <a class="work-view-btn" href="http://leamboatcentre.com" target="_blank">Visit</a></h3>
@@ -61,7 +61,7 @@
           <div class="work-inner">
             <div class="work-screenshot">
               <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-              <img class="work-screenshot-img" src="img/heatheradams_1x.png" alt="Heather Adams web site design" />
+              <img class="work-screenshot-img" src="img/wwh.jpg" alt="Wight Waves Holidays web site design" />
             </div>
             <div class="work-information">
               <h3 class="work-project-title">Wight Waves Holidays <a class="work-view-btn" href="http://wightwavesholidays.co.uk" target="_blank">Visit</a></h3>
